[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
# axum webframework
axum = "0.7.2"

# serde / json
serde = {version = "1", features = ["derive"]}
serde_json = "1"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.8"