[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
# axum webframework
axum = "0.7.2"

# file serve
tower-http = { version = "0.5.0", features = ["fs"]}
# middle-ware
tower-cookies = "0.10.0"

# serde / json
serde = {version = "1", features = ["derive"]}
serde_json = "1"


# lazy compile regex once and use after
lazy-regex = { version = "3.1.0"}

# adding async  - implement trait which has async function
async-trait = "0.1.75"

# serialize the enum
strum_macros = "0.25.3"

uuid = { version = "1.6.1" , features = ["v4", "fast-rng"]}

serde_with = "3.4.0"

chrono = "0.4.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.8"